--- a/config.json
+++ b/config.json
@@ -9,6 +9,12 @@
       "footerCopyright": "© 2024 Painted by Sara. Alle Rechte vorbehalten."
     },
     "home": {
+      "statementTitle": "Verwandeln Sie sich",
+      "statementSubtitle": "Mein Ziel ist es, nicht nur Make-up aufzutragen, sondern Selbstvertrauen zu schaffen. Lassen Sie uns gemeinsam Ihren Traum-Look kreieren.",
+      "statementButtonText": "JETZT BERATEN",
+      "presentationTitle": "Verwandeln Sie sich",
+      "presentationSubtitle": "Mein Ziel ist es, nicht nur Make-up aufzutragen, sondern Selbstvertrauen zu schaffen. Buchen Sie jetzt Ihre Beratung.",
+      "presentationButtonText": "JETZT BERATEN",
       "heroTitle": "Ihre Vision, Meine Kunst",
       "heroSubtitle": "Professionelles Make-up für unvergessliche Momente.",
       "heroButtonText": "Jetzt Buchen",
@@ -107,6 +113,12 @@
       "footerCopyright": "© 2024 Painted by Sara. All rights reserved."
     },
     "home": {
+      "statementTitle": "Verwandeln Sie sich",
+      "statementSubtitle": "Mein Ziel ist es, nicht nur Make-up aufzutragen, sondern Selbstvertrauen zu schaffen. Lassen Sie uns gemeinsam Ihren Traum-Look kreieren.",
+      "statementButtonText": "JETZT BERATEN",
+      "presentationTitle": "Verwandeln Sie sich",
+      "presentationSubtitle": "Mein Ziel ist es, nicht nur Make-up aufzutragen, sondern Selbstvertrauen zu schaffen. Buchen Sie jetzt Ihre Beratung.",
+      "presentationButtonText": "JETZT BERATEN",
       "heroTitle": "Your Vision, My Artistry",
       "heroSubtitle": "Professional makeup for unforgettable moments.",
       "heroButtonText": "Book Now",
@@ -205,6 +217,12 @@
       "footerCopyright": "© 2024 Painted by Sara. Sva prava zadržana."
     },
     "home": {
+      "statementTitle": "Verwandeln Sie sich",
+      "statementSubtitle": "Mein Ziel ist es, nicht nur Make-up aufzutragen, sondern Selbstvertrauen zu schaffen. Lassen Sie uns gemeinsam Ihren Traum-Look kreieren.",
+      "statementButtonText": "JETZT BERATEN",
+      "presentationTitle": "Verwandeln Sie sich",
+      "presentationSubtitle": "Mein Ziel ist es, nicht nur Make-up aufzutragen, sondern Selbstvertrauen zu schaffen. Buchen Sie jetzt Ihre Beratung.",
+      "presentationButtonText": "JETZT BERATEN",
       "heroTitle": "Vaša Vizija, Moja Umetnost",
       "heroSubtitle": "Profesionalna šminka za nezaboravne trenutke.",
       "heroButtonText": "Rezerviši",
